Revert "Updating scm connection url"
This reverts commit ebb6ac9af6fa684a8bbd3669e5171feac0dea74a.

--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,9 @@
     </mailingLists>
 
     <scm>
-        <connection>scm:git:https://github.com/betfair/virtualheap.git</connection>
+        <connection>scm:git:git@github.com:betfair/virtualheap.git</connection>
         <url>https://github.com/betfair/virtualheap.git</url>
-        <developerConnection>scm:git:ssh://git@github.com/betfair/virtualheap.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:betfair/virtualheap</developerConnection>
     </scm>
 
     <ciManagement>
