--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>com.betfair.platform</groupId>
     <artifactId>virtualheap</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <name>virtualheap</name>
     <description>A framework for replicated objects</description>
 
